# claude-history-explorer

./: .gitignore  CHANGELOG.md  CLAUDE.md  FAQ.md  PLAN-work-type-classification.md  README.md  ROADMAP.md  SKETCH-frequency-command.md  TRUST.md  project_analysis.md  pyproject.toml
.github/workflows/: ci.yml
claude_history_explorer/: __init__.py  cli.py  constants.py  frequency.py  history.py  models.py  parser.py  projects.py  stats.py  stemmer.py  stories.py  utils.py  work_classifier.py  wrapped.py
docs/: ARCHITECTURE.md  DOMAIN_MODEL.md  FREQUENCY_SPEC.md  JSON_SCHEMAS.md  LESSONS_LEARNED.md  RELEASE_PROCESS.md  THREAD_MAP_SPEC.md  WRAPPED_ARCHITECTURE.md  WRAPPED_CLOUDFLARE_SHOWCASE.md  WRAPPED_SPEC.md  WRAPPED_UX.md  WRAPPED_V3_SPEC.md
scripts/: smoketest_local_corpus.py
tests/: conftest.py  generate_schema_test_cases.py  test_audit_regressions.py  test_backwards_compatibility.py  test_cli_integration.py  test_frequency.py  test_history.py  test_integration.py  test_modules.py  test_schema_alignment.py  test_stemmer.py  test_windows_compat.py  test_work_classifier.py  test_work_type.py  test_wrapped.py
tests/fixtures/: golden_urls.json  schema_test_cases.json
wrapped-website/: .gitignore  package-lock.json  package.json  test_decoder.mjs  tsconfig.json  vitest.config.ts  wrangler.toml
wrapped-website/src/: constants.ts  decoder.ts  index.ts  og.ts  utils.ts
wrapped-website/src/pages/: bento.ts  landing.ts  print.ts  (+2 more)
wrapped-website/tests/: backwards-compat.test.ts  coverage.test.ts  decoder.test.ts  schema-alignment.test.ts  security.test.ts
