[project]
name = "claude-history-explorer"
version = "0.1.0"
description = "CLI tool to explore Claude Code conversation history"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "sparklines>=0.4.0",
]

[project.scripts]
claude-history = "claude_history_explorer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_history_explorer"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
